template fix